--- a/index.html
+++ b/index.html
@@ -225,7 +225,7 @@
                                  <!-- <input id="city" maxlength="40" name="city" size="20" type="text" class="form-control" placeholder="City" required="">
                                  <input id="state" maxlength="20" name="state" size="20" type="text" class="form-control" placeholder="State" required=""> -->
                  
-                                 <button type="submit" name="submit" class="submit-btn form-control" id="form-submit">Submit</button>
+                               <button type="submit" name="submit" class="submit-btn form-control" id="form-submit"><a href="TY.html">Submit</button>
                              </form>
                          </div>
                      </div>
