--- a/form.html
+++ b/form.html
@@ -73,7 +73,7 @@
             <input id="mobile" maxlength="10" name="mobile" type="tel" pattern="[0-9]*" class="form-control" placeholder="Mobile" required>
             <input id="city" maxlength="40" name="city" size="20" type="text" class="form-control" placeholder="City" required>
             <input id="state" maxlength="20" name="state" size="20" type="text" class="form-control" placeholder="State" required>
-            <button type="submit" name="submit" class="submit-btn form-control" id="form-submit">Submit</button>
+            <button type="submit" name="submit" class="submit-btn form-control" id="form-submit"><a href="TY.html">Submit</button>
         </form>
     </div>
     
