--- a/Agile.html
+++ b/Agile.html
@@ -165,7 +165,7 @@ footer .social-icon {
                 <h2>Who this course is for:</h2>
                 <p>This course is ideal for professionals across industries, including:</p>
                 <ul>
-                    <li>Computer Science and IT Students</li>
+                    <li>Students Graduated in any field</li>
                     <li>Job Aspirants</li>
                     <li>Software developers</li>
                     <li>Career Advancement</li>
