--- a/ManualTesting.html
+++ b/ManualTesting.html
@@ -161,7 +161,7 @@
                 <h2>Who this course is for:</h2>
                 <p>This course is ideal for professionals across industries, including:</p>
                 <ul>
-                    <li>Computer Science and IT Students</li>
+                    <li>Students Graduated in any field</li>
                     <li>Job Aspirants</li>
                     <li>Non-IT Professionals Transitioning to IT</li>
                     <li>Career Advancement</li>
