--- a/index.html
+++ b/index.html
@@ -483,7 +483,7 @@ Your dreams, ambitions, and career aspirations find a home here. Let's embark on
                     <form id="contact-form" role="form" action="https://webto.salesforce.com/servlet/servlet.WebToCase?encoding=UTF-8&orgId=00D5j00000D98yH" method="POST">
 
                               <input type=hidden name="orgid" value="00D5j00000D98yH">
-                              <input type=hidden name="retURL" value="https://testingmantraacademy.github.io/.com/TY.html">
+                              <input type=hidden name="retURL" value="https://testingmantraacademy.github.io/.com/TYCASE.html">
                          <div class="section-title">
                               <h2>Contact Us <small>We love conversations. Let us talk!</small></h2>
                          </div>
