BUG FIXES FINAL

--- a/ManualTesting.html
+++ b/ManualTesting.html
@@ -212,7 +212,7 @@
                                   </div>
                                        <div>
                                             <img src="images\email.png" alt="Email Logo" width="27" height="27">
-                                            <a href="mailto:example@email.com" style="font-size: 12px; margin-left: 10px; color: whitesmoke;">testingmantraacademy@gmail.com</a>
+                                            <a href="mailto:testingmantraacademy@gmail.com" style="font-size: 12px; margin-left: 10px; color: whitesmoke;">testingmantraacademy@gmail.com</a>
                                         </div>
                                    
                                        <!-- <p><a href="testingmantraacademy@gmail.com">testingmantraacademy@gmail.com</a></p> -->
