bug Fixes minor

--- a/index.html
+++ b/index.html
@@ -21,8 +21,39 @@
 <link rel="stylesheet" href="css/templatemo-style.css">
 
 
+<style>
+     /* CSS for the navigation bar */
+   
+     .navbar {
+         background-color: #f0ebeb; /* Background color for the navbar */
+     }
 
+     .navbar .navbar-brand img {
+         max-height: auto; /* Maximum height for the logo */
+         width: auto;
+         /* Adjust padding as needed */
+     }
 
+     /* MENU LINKS */
+     .navbar .navbar-nav li {
+         margin:0px 12px; /* Adjust the spacing between the links */
+     }
+
+     .navbar .navbar-nav li a {
+         color: rgb(19, 18, 18);
+         text-decoration: none;
+         font-size: 15px;
+     }
+
+     .navbar .navbar-nav li a:hover {
+         background-color: #c95362; /* Background color on hover */
+         color: rgb(255, 255, 255); /* Text color on hover */
+     }
+     .company-logo {
+         width: 200px; /* Let the image adjust its size */
+         height: 100px; /* Adjust the logo height as needed */
+     }
+</style>
 </head>
 <body id="top" data-spy="scroll" data-target=".navbar-collapse" data-offset="50">
 
@@ -34,7 +65,6 @@
           
      </div>
 </section>
-
 
 <!-- MENU -->
 <section class="navbar custom-navbar navbar-fixed-top" role="navigation">
@@ -48,30 +78,22 @@
              </button>
          </div>
  
-         <div class="navbar-brand" >
-             <!-- lOGO TEXT HERE -->
-             <a href="#home"><img src="images\Testing Mantra Logo12.png" alt="Testing Mantra Academy Logo" width="200px" height="auto"></a>
-             <!-- <a class="navbar-brand" href="#">
-               <img src="" alt="Square Logo" >
-           </a> -->
-         </div>
- 
          <!-- MENU LINKS -->
          <div class="collapse navbar-collapse">
              <ul class="nav navbar-nav navbar-nav-first">
-                 <li><a href="#top" class="smoothScroll">Home</a></li>
-                 <li><a href="#feature" class="smoothScroll">Features</a></li>
-                 <li><a href="#about" class="smoothScroll">About</a></li>
-                 <li><a href="#team" class="smoothScroll">Our Teachers</a></li>
-                 <li><a href="#courses" class="smoothScroll">Courses</a></li>
-                 <li><a href="#testimonial" class="smoothScroll">Reviews</a></li>
-                 <li><a href="#contact" class="smoothScroll">Support</a></li>
+                 <li><a href="#home"><img src="images\Testing Mantra Logo12.png" alt="Testing Mantra Academy Logo" class="company-logo"></a></li>
+                 <li><a href="#top" class="smoothScroll"style="margin-top: 35px;" >Home</a></li>
+                 <li><a href="#feature" class="smoothScroll" style="margin-top: 35px;">Features</a></li>
+                 <li><a href="#about" class="smoothScroll" style="margin-top: 35px;">About</a></li>
+                 <li><a href="#team" class="smoothScroll" style="margin-top: 35px;">Our Teachers</a></li>
+                 <li><a href="#courses" class="smoothScroll" style="margin-top: 35px;">Courses</a></li>
+                 <li><a href="#testimonial" class="smoothScroll" style="margin-top: 35px;">Reviews</a></li>
+                 <li><a href="#contact" class="smoothScroll" style="margin-top: 35px;">Support</a></li>
              </ul>
          </div>
  
      </div>
  </section>
- 
 
 
 <!-- HOME -->
@@ -140,15 +162,19 @@
                     <div class="feature-thumb">
                          <span>02</span>
                          <h3>Practical, Industry-Relevant Learning</h3>
-                         <p>Our industry-aligned curriculum ensures that you gain practical, hands-on experience with the latest technologies, making you a competitive asset in the job market and empowering you to implement what you learn in real-world scenarios.</p>
+                         <p>Our industry-aligned curriculum ensures that you gain practical, hands-on experience with the latest technologies, making you a competitive asset in the job market and empowering you to implement what you learn in real-world scenarios with the help of our <b>Real-Time Project</b> dedicatedly build for training purpose.</p>
                     </div>
                </div>
 
                <div class="col-md-4 col-sm-4">
                     <div class="feature-thumb">
                          <span>03</span>
-                         <h3>Flexible Learning</h3>
-                         <p>Our online courses offer flexibility to fit your schedule, allowing you to balance your studies with other commitments while staying at the forefront of industry advancements.</p>
+                         <h3>Learn Industry Relevent Tools</h3>
+                         <p>Learn the Latest Tools and Technologies!
+                              Explore our curriculum, which includes in-depth training on the most current and in-demand 
+                              tools, such as <b>JIRA</b>, Java-Selenium, Git, Salesforce, and more. Gain a competitive advantage
+                               in your career by mastering these industry-standard tools, 
+                              all under the guidance of our expert instructors and through hands-on learning experiences.</p>
                     </div>
                </div>
 
@@ -447,7 +473,7 @@ Your dreams, ambitions, and career aspirations find a home here. Let's embark on
                                         <span>Company - Altudo, Manual Tester</span>
                                    </div>
                                    <p>⭐⭐⭐⭐ (4/5)</p>    
-                                     <p>"I'm absolutely thrilled with my choice to sign up for the Salesforce Testing Course.la jaein mhantoy The instructors were knowledgeable and the course content was spot on. It didn't take long after completing the course to land a job offer in Salesforce testing. This course is a stepping stone to a promising career."</p>
+                                     <p>"I'm absolutely thrilled with my choice to sign up for the Salesforce Testing Course. The instructors were knowledgeable and the course content was spot on. It didn't take long after completing the course to land a job offer in Salesforce testing. This course is a stepping stone to a promising career."</p>
                               </div>
                          </div>
 
@@ -475,7 +501,7 @@ Your dreams, ambitions, and career aspirations find a home here. Let's embark on
                                         <span>College Student, Automation Testing</span>
                                    </div>
                                    <p>⭐⭐⭐⭐⭐ (5/5)</p>    
-                                     <p> "Enrolling in Salesforce Testing Course was a turning point in my career journey. The course provided a deep understanding of Salesforce testing, and the instructors were exceptional. Thanks to this course, I received multiple job offers as a Salesforce tester and had the opportunity to choose the one that suited me best. I can't recommend it enough!"</p>
+                                     <p> "Enrolling in Automation Testing Course was a turning point in my career journey. The course provided a deep understanding of automation testing, and the instructors were exceptional. Thanks to this course, I received job offers as a Automation tester and had the opportunity to choose the one that suited me best. I can't recommend it enough!"</p>
                               </div>
                          </div>
 
