Review Changes By Vandana

--- a/index.html
+++ b/index.html
@@ -523,7 +523,7 @@ Your dreams, ambitions, and career aspirations find a home here. Let's embark on
                               <input type=hidden name="orgid" value="00D5j00000D98yH">
                               <input type=hidden name="retURL" value="https://testingmantraacademy.github.io/.com/TYCASE.html">
                          <div class="section-title">
-                              <h2>Contact Us <small>We love conversations. Let us talk!</small></h2>
+                              <h2>Customer Support <small>We love conversations. Let us talk!</small></h2>
                          </div>
 
                          <div class="col-md-12 col-sm-12">
