--- a/TY.html
+++ b/TY.html
@@ -71,19 +71,43 @@
             }
         }
     </style>
+    <style>
+        /* Add your custom CSS styles here */
+        .custom-button {
+            background-color: #c95362; /* Matching the border color */
+            color: #fff;
+            border: none;
+            padding: 10px 20px;
+            border-radius: 5px;
+            text-align: center;
+            text-decoration: none;
+            display: inline-block;
+            font-size: 16px;
+            margin: 10px 2px;
+            cursor: pointer;
+        }
+
+        .custom-button:hover {
+            background-color: #a23e48; /* Slightly darker color on hover */
+        }
+    </style>
 </head>
 <body>
     <div class="container">
         <div class="thank-you-container">
             <h1 class="thank-you-heading">Thank You...</h1>
             <p class="thank-you-text"><span class="interest-line">For Your Interest</span></p>
-            <p class="thank-you-text animation"><span class="response-line">We will get back to you soon.</span></p>
+            <p class="thank-you-text animation"><span class="response-line">We will get back to you soon...</span></p>
+
+<br>
+<br>
+            <div class="container">
+                <a href="index.html" class="btn custom-button">Back to Home Page</a>
+            </div>
         </div>
-    </div>
 
-    <!-- Add Bootstrap JavaScript and Popper.js if needed -->
-    <!-- <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.min.js"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/2.10.2/umd/popper.min.js"></script> -->
-
+        
+    </div> 
+  
 </body>
 </html>
