--- a/Agile.html
+++ b/Agile.html
@@ -176,9 +176,13 @@ footer .social-icon {
             </div>
         </div>
 
+        <div>
         <p class="lead" style="font-style: oblique;"><b>Join us in embracing Agile excellence. Unlock the potential of Agile methodologies to drive innovation, improve project outcomes, and thrive in an ever-evolving business landscape. Our Agile Overview Course is your gateway to becoming an Agile expert. Get started today and elevate your career to new heights.</b></p>
         <a class="btn btn-primary" href="form.html" style="background-color: #c95362; border-color: rgb(255, 255, 255); margin-bottom: 25px;">Register Now</a>
-    </div>
+     
+        <a class="btn btn-primary" href="index.html" style="background-color: #c95362; border-color: rgb(255, 255, 255); margin-bottom: 25px;">Back to Home</a>
+     </div>
+     </div>
      <!-- FOOTER -->
      <footer id="footer">
         <div class="container">
