--- a/AutomationTesting.html
+++ b/AutomationTesting.html
@@ -174,6 +174,7 @@
       
         <p class="lead" style="font-style: oblique;"><b>Master the art of automation testing and play a pivotal role in streamlining the software testing process. Enroll in the Automation Testing Course today to embark on your journey towards becoming a certified automation tester.</b></p>
         <a class="btn btn-primary" href="form.html" style="background-color: #c95362; border-color: rgb(255, 255, 255); margin-bottom: 25px;">Register Now</a>
+        <a class="btn btn-primary" href="index.html" style="background-color: #c95362; border-color: rgb(255, 255, 255); margin-bottom: 25px;">Back to Home</a>
 
     </div>
    <!-- Footer -->
