--- a/ManualTesting.html
+++ b/ManualTesting.html
@@ -174,6 +174,7 @@
        
         <p class="lead" style="font-style: oblique;"><b>This Manual Testing course provides a comprehensive understanding of manual testing techniques and also touches on functional testing, making it suitable for individuals who want to become proficient in software quality assurance and testing, covering both functional and non-functional aspects of software testing.</b></p>
         <a class="btn btn-primary" href="form.html" style="background-color: #c95362; border-color: rgb(255, 255, 255); margin-bottom: 25px;">Register Now</a>
+        <a class="btn btn-primary" href="index.html" style="background-color: #c95362; border-color: rgb(255, 255, 255); margin-bottom: 25px;">Back to Home</a>
 
     </div>
    <!-- Footer -->
