--- a/SFTesting.html
+++ b/SFTesting.html
@@ -174,6 +174,7 @@
        
         <p class="lead" style="font-style: oblique;"><b>Become a Salesforce testing expert and ensure the quality and reliability of Salesforce implementations. Enroll in the Salesforce Testing Course today to embark on your journey toward becoming a certified Salesforce tester.</b></p>
         <a class="btn btn-primary" href="form.html" style="background-color: #c95362; border-color: rgb(255, 255, 255); margin-bottom: 25px;">Register Now</a>
+        <a class="btn btn-primary" href="index.html" style="background-color: #c95362; border-color: rgb(255, 255, 255); margin-bottom: 25px;">Back to Home</a>
 
     </div>
      
