--- a/index.html
+++ b/index.html
@@ -246,7 +246,7 @@ Your dreams, ambitions, and career aspirations find a home here. Let's embark on
                               <input type=hidden name="oid" value="00D5j00000D98yH">
                               <input type=hidden name="retURL" value="https://testingmantraacademy.github.io/.com/TY.html">
                                                        
-                              <h2>Enroll Today</h2>
+                              <h2>Enroll Today!</h2>
                          <input  id="first_name" maxlength="40" name="first_name" class="form-control" placeholder="First Name" required="" size="20" type="text" required autocomplete="off"/>
                          <input  id="last_name" maxlength="40" name="last_name" class="form-control" placeholder="Last Name" required="" size="20" type="text" required autocomplete="off"/>   
                          <input id="email" maxlength="80" name="email" size="20"  type="email" class="form-control" placeholder="Your Email Address" required autocomplete="off">
